<package>
  <name>improved_mha_planner</name>
  <version>1.0.0</version>
  <description>A library of search-based planning algorithms</description>
  <maintainer email="maximl@seas.upenn.edu">Maxim Likhachev</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sbpl</url>
  <!-- <url type="bugtracker"></url> -->

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rosconsole</build_depend>
  <build_depend>libgsl</build_depend>
  <build_depend>boost</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rosconsole</run_depend>
  <run_depend>libgsl</run_depend>
  <run_depend>boost</run_depend>
</package>
